# liblava

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .licenserc.yaml  .travis.yml  CMakeLists.txt  DOCS.md  Dockerfile  LICENSE  README.md  doxygen.conf  ext.json  update.json  update.py
.github/: FUNDING.yml
.github/workflows/: cmake.yml  codeql.yml  codesee-arch-diagram.yml  codesee.yml  container.yml  docs.yml  license.yml  links.yml  linter.yml  review.yml  spelling.yml
cmake/: CPM.cmake  LavaConfig.cmake.in  ext.cmake  version.cmake
doc/: Demo.md  Doxygen.md  Features.md  Guide.md  Install.md  Modules.md  README.md  Reference.md  Tests.md  Third-Party.md  Tutorial.md  build.bat  build.sh  doxygen.conf
docs/: README.md  _navbar.md  config.json  doxygen.conf  index.html
docs/html/: annotated.html  app_2app_8hpp_source.html  argh_8hpp.html  argh_8hpp_source.html  asset_8hpp.html  asset_8hpp_source.html  attachment_8hpp_source.html  base_8hpp.html  base_8hpp_source.html  benchmark_8hpp.html  block_2block_8hpp_source.html  block_8hpp_source.html  camera_8hpp.html  camera_8hpp_source.html  classes.html  compute__pipeline_8hpp_source.html  config_8hpp.html  config_8hpp_source.html  core_8hpp_source.html  debug__utils_8hpp_source.html  descriptor_8hpp_source.html  device_8hpp_source.html  device__table_8hpp.html  device__table_8hpp_source.html  dir_558ebd3353fe8357fa6412e5c10055e9.html  dir_634d5d633a3790f07301113583801329.html  dir_7bef0c256c14f2cccb8616748105728a.html  dir_d7b126f26ac50bbf019d298c6f463b5a.html  dir_fa1f593510c4ea9826cec9e9a7a3d5e9.html  driver_8hpp.html  driver_8hpp_source.html  engine_2engine_8hpp_source.html  file_2file_8hpp.html  file__utils_8hpp_source.html  files.html  forward__shading_8hpp.html  forward__shading_8hpp_source.html  frame_2frame_8hpp.html  frame_8hpp_source.html  functions_b.html  (+217 more)
ext/: README.md  list.json  update.py  version.json
liblava/: app.hpp  asset.hpp  base.hpp  block.hpp  core.hpp  def.hpp  engine.hpp  file.hpp  frame.hpp  fwd.hpp  generic.hpp  lava.hpp  resource.hpp  test.hpp  tool.hpp  util.hpp  utils.hpp
liblava-demo/: demo.cpp  demo.hpp  generic_triangle.cpp  generics.cpp  lamp.cpp  light.cpp  main.cpp  shapes.cpp  spawn.cpp  triangle.cpp
liblava-stage/: examples.cpp  main.cpp  tutorial.cpp
liblava/app/: app.cpp  app.hpp  app_icon.c  benchmark.cpp  benchmark.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  def.hpp  forward_shading.cpp  forward_shading.hpp  gui.cpp  gui.hpp  icon.hpp  imgui.cpp  imgui.hpp  layer.hpp
liblava/asset/: image_data.cpp  image_data.hpp  image_loader.cpp  image_loader.hpp  load_image.cpp  load_image.hpp  load_mesh.cpp  load_mesh.hpp  load_texture.cpp  load_texture.hpp  mesh.cpp  mesh.hpp  mesh_loader.cpp  mesh_loader.hpp  raw_image.cpp  raw_image.hpp  scope_image.cpp  scope_image.hpp  texture.cpp  texture.hpp  texture_loader.cpp  texture_loader.hpp  write_image.cpp  write_image.hpp
liblava/base/: base.cpp  base.hpp  buffer.cpp  buffer.hpp  debug_utils.cpp  debug_utils.hpp  device.cpp  device.hpp  device_table.hpp  format.cpp  format.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  memory.cpp  memory.hpp  object_type.hpp  physical_device.cpp  physical_device.hpp  platform.cpp  platform.hpp  profile.hpp  queue.cpp  queue.hpp
liblava/block/: attachment.hpp  block.cpp  block.hpp  compute_pipeline.cpp  compute_pipeline.hpp  def.hpp  descriptor.cpp  descriptor.hpp  generic.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render_pass.cpp  render_pass.hpp  render_pipeline.cpp  render_pipeline.hpp  subpass.cpp  subpass.hpp
liblava/core/: data.hpp  def.hpp  hex.hpp  id.hpp  layer.hpp  math.hpp  misc.hpp  time.hpp  types.hpp  version.hpp
liblava/engine/: def.hpp  driver.cpp  driver.hpp  engine.cpp  engine.hpp  examples.cpp  main.cpp  producer.cpp  producer.hpp  property.cpp  property.hpp  props.cpp  props.hpp  stage.cpp  stage.hpp  tutorial.cpp
liblava/file/: def.hpp  file.cpp  file.hpp  file_system.cpp  file_system.hpp  file_utils.cpp  file_utils.hpp  json.hpp  json_file.cpp  json_file.hpp
liblava/frame/: argh.cpp  argh.hpp  driver.cpp  driver.hpp  frame.cpp  frame.hpp  gamepad.cpp  gamepad.hpp  input.cpp  input.hpp  render_target.cpp  render_target.hpp  render_thread.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
liblava/resource/: buffer.cpp  buffer.hpp  format.cpp  format.hpp  generic_mesh.hpp  image.cpp  image.hpp  imageloader.cpp  imageloader.hpp  mesh.cpp  mesh.hpp  mesh.tpp  meshloader.cpp  meshloader.hpp  primitive.hpp  stb_inc.cpp  stb_inc.hpp  texture.cpp  texture.hpp  textureloader.cpp  textureloader.hpp  tinyobj_inc.cpp  tinyobj_inc.hpp
liblava/test/: driver.cpp  driver.hpp  tutorial.cpp  unit.hpp
liblava/tool/: camera.cpp  camera.hpp  forward_shading.cpp  forward_shading.hpp  gui.cpp  gui.hpp
liblava/util/: def.hpp  file.cpp  file.hpp  hex.hpp  layer.hpp  log.hpp  math.hpp  misc.hpp  random.hpp  telegram.hpp  thread.hpp  utility.hpp
liblava/utils/: file.cpp  file.hpp  log.hpp  random.hpp  telegram.hpp  thread.hpp  utility.hpp
res/demo/: demo.frag  demo.vert
res/generic_triangle/: double_triangle.spirv  double_triangle.vert  gen_spirv.sh  int_triangle.spirv  lava_triangle.spirv  lava_triangle.vert  triangle.frag  triangle_frag.spirv
res/generics/: gen_spirv.bat  int_triangle.vert  triangle_frag.spirv
res/imgui/: imgui.frag.u32  imgui.vert.u32
res/lamp/: fragment.spirv  gen_spirv.bat  gen_spirv.sh  lamp.frag  lamp.frag.u32  lamp.vert  lamp.vert.u32  vertex.spirv
res/light/: data.inc  gbuffer.frag  gbuffer.fragment.spirv  gbuffer.vert  gbuffer.vertex.spirv  gen_spirv.bat  gen_spirv.sh  lighting.frag  lighting.fragment.spirv  lighting.vert  lighting.vertex.spirv
res/shapes/: frag.glsl  frag.spirv  fragment.spirv  gen_spirv.bat  gen_spirv.sh  shapes.frag  shapes.vert  vert.glsl  (+2 more)
src/: main.cpp
tests/: driver.cpp  driver.hpp  tests.cpp  unit.cpp  unit.hpp
tool/: doxygen.conf  ext.json  update.json  update.py  version.json
(+416 files in other folders)
